--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>King of the Blockchain</title>
 
+    <link rel="icon" href="favicon.svg">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 
