Added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Become the king of the blockchain by being the highest bidder, donating 60% of your bid to charity">
+    <meta property="og:title" content="King of the Blockchain">
+    <meta property="og:description" content="Become the king of the blockchain by being the highest bidder, donating 60% of your bid to charity">
+    <meta property="og:image" content="https://kingoftheblockchain.com/favicon.svg">
+    <meta property="og:url" content="https://kingoftheblockchain.com/index.html">
     <title>King of the Blockchain</title>
 
     <link rel="icon" href="favicon.svg">
