Show Chain currency in leaderboard

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                 <div class="col col-xs-12 col-md-4">
                   <p
                   class="amount"
-                  x-text="web3.utils.fromWei(bid.bid, 'ether') + ' ETH'"
+                  x-text="web3.utils.fromWei(bid.bid, 'ether') + ' ' + config[chain].currency"
                   ></p>
               </div>
               </div>
